--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.0",
+    "@mui/material-nextjs": "^6.1.0",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "prettier": "^3.3.3",
+    "ra-data-json-server": "^5.1.4",
     "react": "^18",
+    "react-admin": "^5.1.4",
     "react-dom": "^18"
   },
   "devDependencies": {
